--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "lucide-react": "^0.554.0",
-    "framer-motion": "^12.23.24",
-    "vite": "^7.2.4",
-    "@vitejs/plugin-react": "^5.1.1"
+    "framer-motion": "^12.23.24"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
